--- a/website/src/components/discourse/styles.module.css
+++ b/website/src/components/discourse/styles.module.css
@@ -2,6 +2,7 @@
   padding: 4rem 0;
 }
 
+/* Posts */
 .discourseSection .discoursePosts {
   margin-bottom: 3rem;
 }
@@ -21,6 +22,7 @@
   border-bottom: none;
 }
 
+/* Cta */
 .discourseCta {
   font-size: 1.1rem;
   margin-top: 1rem;
@@ -28,3 +30,10 @@
 .discourseCta:hover {
   background: var(--color-light-teal);
 }
+
+/* Loading icon */
+.discourseSection .loadingIcon {
+  max-width: 100px;
+  display: block;
+}
+
