small fix for mobile darkmode icon

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -840,6 +840,7 @@ filter: opacity(.75);
 
   .navbar-sidebar__brand > div:first-of-type {
     order: 1;
+    margin-right: 0;
   }
 
   button.DocSearch-Button {
