--- a/website/src/components/faqs/styles.module.css
+++ b/website/src/components/faqs/styles.module.css
@@ -24,6 +24,7 @@
     margin-bottom: 10px;
     padding: 20px;
     background-color: #e3f8f8;
+    color: var(--ifm-color-gray-900);
 }
 
 :local(.body > p:last-child) {
