--- a/website/src/components/discourse/styles.module.css
+++ b/website/src/components/discourse/styles.module.css
@@ -1,5 +1,8 @@
 .discourseSection {
-  padding: 4rem 0;
+  padding: 4rem 0 0;
+}
+.discourseSection:last-of-type {
+  padding-bottom: 4rem;
 }
 
 /* Posts */
