add default top margin

--- a/website/src/components/discourse/styles.module.css
+++ b/website/src/components/discourse/styles.module.css
@@ -1,6 +1,6 @@
 /* Posts Section */
 .discoursePosts {
-  margin-bottom: 3rem;
+  margin: 2rem 0 3rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
