--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -183,7 +183,7 @@ a.code-link:hover {
 }
 
 .navbar__logo {
-  margin-left: .rem;
+  margin-left: 1rem;
 }
 
 .navbar__search-input {
@@ -1013,7 +1013,7 @@ filter: opacity(.75);
   }
 
   .navbar {
-    padding: 0 var(--ifm-navbar-padding-horizontal) 0; 
+    padding: 0 var(--ifm-navbar-padding-horizontal) 0 0; 
   }
 
   html.docs-version-current aside html.docs-version-current .sidebar_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocSidebar-styles-module {
