--- a/website/src/components/discourse/styles.module.css
+++ b/website/src/components/discourse/styles.module.css
@@ -36,9 +36,11 @@
 .discourseCta {
   font-size: 1.1rem;
   margin-top: auto;
+  color: #fff;
 }
 .discourseCta:hover {
   background: var(--color-light-teal);
+  color: #fff;
 }
 
 /* Loading icon */
