adjust nav order for right nav items

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -224,10 +224,20 @@ a.code-link:hover {
   align-self: auto;
   padding: 0 12px;
   margin-top: 0;
+  margin-left: 0;
   border: none;
+  order: 3;
 }
 .navbar__items .navbar__link.nav-create-account:hover {
   background: var(--color-light-teal);
+}
+
+/* Reorder search and darkmode toggle */
+.navbar__items.navbar__items--right div[class^="searchBox"] {
+  order: 2;
+}
+.navbar__items.navbar__items--right div[class^="toggle"] {
+  order: 4;
 }
 
 .dropdown__link:hover {
