--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -40,6 +40,8 @@
   --ifm-code-background: var(--ifm-color-emphasis-200);
   --ifm-navbar-item-padding-horizontal: 1rem;
   --ifm-alert-color: var(--ifm-font-color-base-inverse);
+  --ifm-color-info-contrast-foreground: var(--ifm-color-gray-900);
+  --ifm-alert-foreground-color: --ifm-color-gray-900;
   --ifm-toc-padding-vertical: 1rem;
   --color-primary-blue: #262a38;
   --color-green-blue: #047377;
@@ -93,6 +95,79 @@ html[data-theme='dark'] {
   --docsearch-footer-background: var(--color-primary-blue) !important;
   --docsearch-searchbox-focus-background: var(--color-primary-blue) !important;
   --docsearch-highlight-color: var(--docsearch-muted-color) !important;
+
+  /* admonition icon */
+  --ifm-color-info-contrast-foreground: var(--ifm-color-gray-900);
+
+  --ifm-table-cell-color: var(--color-green-blue);
+}
+
+/* For /dbt-cloud/api REDOC Page */
+html[data-theme='dark'] .api-content h2, 
+html[data-theme='dark'] .api-content h3, 
+html[data-theme='dark'] .api-content h4, 
+html[data-theme='dark'] .api-content h5, 
+html[data-theme='dark'] .api-content h5 span, 
+html[data-theme='dark'] .api-content h1 {
+  color: white;
+}
+
+html[data-theme='dark'] .api-content a,
+html[data-theme='dark'] .api-content button {
+  filter: brightness(1.5);
+}
+
+.redoc-wrap {
+  font-size: 1rem;
+}
+
+.api-content {
+  font-size: 1.125rem;
+}
+
+.menu-content {
+  font-size: 1rem;
+  margin-top: 1em;
+}
+
+html[data-theme='dark'] .api-content {
+    color: white;
+}
+
+html[data-theme='dark'] .api-content table td > span,
+html[data-theme='dark'] .api-content table td p {
+  color: var(--color-orange);
+}
+
+html[data-theme='dark'] .api-content table td span {
+  color: white;
+}
+
+html[data-theme='dark'] .hComDo div {
+  background: transparent;
+}
+
+html[data-theme='dark'] .api-content table td p {
+  color: brown;
+}
+
+html[data-theme='dark'] .redoc-wrap .menu-content * :not(.operation-type),
+html[data-theme='dark'] .redoc-wrap .menu-content,
+html[data-theme='dark'] .redoc-wrap .menu-content .search-input {
+  color: white !important;
+  background-color: transparent !important;
+}
+
+html[data-theme='dark'] .redoc-wrap svg {
+  filter: brightness(4.5);
+}
+
+html[data-theme='dark'] .redoc-markdown pre {
+  filter: brightness(1.5);
+}
+
+html[data-theme='dark'] input.sc-avest {
+  filter: brightness(2.5);
 }
 
 .dropdown--version--hide .dropdown__menu {
@@ -109,7 +184,6 @@ html[data-theme='dark'] .container.home {
   background: var(--ifm-background-color) !important;
 }
 
-/* For /dbt-cloud/api redoc page */
 div.collapser {
   color: var(--color-white);
 }
@@ -185,7 +259,7 @@ a.code-link:hover {
 }
 
 .navbar__logo {
-  margin-left: 1rem;
+  margin-left: 1.25rem;
 }
 
 .navbar__search-input {
@@ -195,7 +269,7 @@ a.code-link:hover {
 }
 
 .navbar__link {
-  font-size: .875rem;
+  font-size: 1rem;
   margin: var(--ifm-navbar-item-padding-vertical) var(--ifm-navbar-item-padding-horizontal) 0;
   padding: 0;
   border-bottom: 1px solid transparent;
@@ -316,7 +390,7 @@ a.navbar__item.navbar__link.btn:hover {
 
 /* sidebar menu */
 .menu__link {
-  font-size: .875rem;
+  font-size: 1rem;
   justify-content: flex-end;
   flex-direction: row-reverse;
   padding: 1rem;
@@ -426,6 +500,7 @@ a.navbar__item.navbar__link.btn:hover {
 
 .table-of-contents {
   font-size: 0.9rem;
+  padding-left: .75rem;
 }
 
 .featherlight:before {
@@ -456,14 +531,14 @@ a.navbar__item.navbar__link.btn:hover {
   font-size: 1.5rem;
 }
 
+.admonition-icon svg {
+  fill: var(--ifm-color-gray-900);
+}
+
 .admonition:not(.admonition-note) h5,
 .admonition:not(.admonition-note) .admonition-content,
 .admonition:not(.admonition-note) .admonition-content a {
   color: var(--ifm-color-gray-900);
-}
-
-.admonition-icon {
-  display: none;
 }
 
 /* Shamelessly copy/pasted from our style guide */
@@ -680,7 +755,7 @@ div .toggle_src-components-faqs-styles-module {
 }
 
 .pagination-nav__link {
-  padding: var(--ifm-global-spacing) 0;
+  padding: 1rem 0;
   transition: 100ms all ease-in-out;
   border: none;
 }
@@ -706,17 +781,21 @@ div .toggle_src-components-faqs-styles-module {
 .markdown > p,
 .markdown li,
 blockquote {
-  font-size: clamp(.875rem, 1.5vw, 1.125rem);
-  line-height: var(--filter-brightness-high);
+  font-size: 1.125rem;
+  line-height: 1.5;
 }
 .pagination-nav__link {
-  font-size: clamp(.875rem, 1.5vw, 1.25rem);
+  font-size: 1rem;
 }
 .title_src-components-file- {
-  font-size: 0.813rem !important;
+  font-size: 1.125rem !important;
 }
 .markdown h1:first-child {
   font-size: clamp(var(--ifm-h1-font-size) * .9375, 1vw, var(--ifm-h1-font-size));
+  margin-top: .5rem;
+}
+.link_src-components-faqs-styles-module {
+  font-size: 1.125rem;
 }
 
 /* Docs */
@@ -805,13 +884,13 @@ html[data-theme='dark'] .breadcrumbs__item--active .breadcrumbs__link {
 /* footer styles */
 .footer {
   font-weight: var(--ifm-font-weight-narrow);
-  font-size: 1.125rem;
+  font-size: .875rem;
   padding-top: var(--ifm-footer-padding-vertical);
   padding-bottom: var(--ifm-footer-padding-vertical);
 }
 
 .footer button {
-  font-size: 1.125rem;
+  font-size: .875rem !important;
 }
 
 .footer a {
@@ -863,7 +942,7 @@ filter: opacity(.75);
 .footer__bottom {
   text-align: left;
   color: var(--color-footer-accent);
-  font-size: 1rem;
+  font-size: .875rem;
 }
 
 .footer__copyright {
@@ -1051,6 +1130,11 @@ filter: opacity(.75);
     max-width: calc(100% - var(--doc-sidebar-width));
   }
 
+  .row .docItemCol_src-theme-DocItem-styles-module {
+    padding-left: 2.5rem;
+    padding-right: 1.5rem;
+  }
+
   .table-of-contents::before {
     content: 'CONTENTS';
     margin-left: 0.5rem;
@@ -1063,8 +1147,12 @@ filter: opacity(.75);
     color: var(--color-white);
   }
 
+  html[data-theme='dark'] .menu-content {
+    border-right: 1px solid #dadde1;
+  }
+
   nav.menu_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocSidebar-styles-module {
-    padding: 1rem;
+    padding: 1.25rem;
   }
 
   .docSidebarContainer_src-theme-DocPage-styles-module {
