--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -196,7 +196,7 @@ a.code-link:hover {
 
 .navbar__link {
   font-size: .875rem;
-  margin: 0 var(--ifm-navbar-item-padding-horizontal) 0;
+  margin: var(--ifm-navbar-item-padding-vertical) var(--ifm-navbar-item-padding-horizontal) 0;
   padding: 0;
   border-bottom: 1px solid transparent;
 }
@@ -216,36 +216,6 @@ a.code-link:hover {
   display: flex;
   align-items: baseline;
   justify-content: center;
-}
-
-.navbar-sidebar .menu__link.nav-create-account {
-  color: var(--color-white);
-  border: none;
-}
-.navbar-sidebar .menu__link.nav-create-account:hover {
-  color: var(--color-white);
-  background: var(--color-light-teal);
-}
-.navbar__items .navbar__link.nav-create-account {
-  color: var(--color-white);
-  height: 30px;
-  align-self: auto;
-  padding: 0 12px;
-  margin-top: 0;
-  margin-left: 0;
-  border: none;
-  order: 3;
-}
-.navbar__items .navbar__link.nav-create-account:hover {
-  background: var(--color-light-teal);
-}
-
-/* Reorder search and darkmode toggle */
-.navbar__items.navbar__items--right div[class^="searchBox"] {
-  order: 2;
-}
-.navbar__items.navbar__items--right div[class^="toggle"] {
-  order: 4;
 }
 
 .dropdown__link:hover {
@@ -281,19 +251,7 @@ a.code-link:hover {
   margin-right: .75em;
 }
 
-/* moon/sun icons for dark/light mode */
-html[data-theme=light] svg[class^="lightToggleIcon_"] {
-  display: none;
-}
-html[data-theme=light] svg[class^="darkToggleIcon_"] {
-  display: block;
-}
-html[data-theme=dark] svg[class^="lightToggleIcon_"] {
-  display: block;
-}
-html[data-theme=dark] svg[class^="darkToggleIcon_"] {
-  display: none;
-}
+/* moon/sun icons for dark/light mode - HIDE UNTIL SWIZZLE - These styles get overridden on live site */
 /* input.toggleScreenReader_node_modules-\@docusaurus-theme-classic-lib-next-theme-ColorModeToggle-styles-module::after {
   width: 100%;
   height: 100%;
@@ -676,7 +634,7 @@ div .toggle_src-components-faqs-styles-module {
 }
 
 .card.large .button:hover {
-  background: var(--color-white);
+  background: #fff;
   border-color: var(--color-white);
   color: var(--color-green-blue);
 }
@@ -992,7 +950,6 @@ filter: opacity(.75);
     button.DocSearch-Button {
       border: 1px solid #95a0b1;
       border-radius: 5px;
-      height: 30px;
     }
     
     button.DocSearch-Button:active, 
@@ -1002,12 +959,6 @@ filter: opacity(.75);
       background: white; 
       box-shadow: var(--docsearch-searchbox-shadow);
       border: 1px solid var(--ifm-link-color);
-    }
-
-    [data-theme='dark'] button.DocSearch-Button:active,
-    [data-theme='dark'] button.DocSearch-Button:focus,
-    [data-theme='dark'] button.DocSearch-Button:hover {
-      background: #ffffff10;
     }
     
     button .DocSearch-Button-Placeholder {
