--- a/website/src/components/hero/styles.module.css
+++ b/website/src/components/hero/styles.module.css
@@ -3,4 +3,40 @@
   padding-top:3rem;
   padding-bottom:3rem;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* position: relative; */
+  min-height: 400px;
+  margin-bottom: 0;
+}
+
+[data-theme='light'] .Hero {
+  color: #fff;
+}
+
+@media (min-width: 996px) {
+  .Hero {
+    margin-bottom: 9rem;
+  }
+}
+
+.showGraphic {
+  display: none;
+}
+
+@media (min-width: 996px) {
+  .showGraphic{
+    position: absolute;
+    left: -50px;
+    top:150px;
+    content:'';
+    display: block;
+    width: 25vw;
+    max-width: 315px;
+    height: 428px;
+    background-size: contain;
+    background-image: url('/img/hero-graphic.png');
+    background-repeat: no-repeat;
+  }
 }
