--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -1092,7 +1092,7 @@ filter: opacity(.75);
   }
 
   aside .menu {
-    padding-left: 1.25rem;
+    padding-left: .5rem;
     padding-right: 1.25rem;
   }
 
