--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -369,7 +369,8 @@ a.navbar__item.navbar__link.btn:hover {
 }
 
 .menu__caret {
-  padding: 0 0 0 1rem;
+  padding: 0 1rem;
+  margin-left: 0;
 }
 
 .menu__caret:hover {
@@ -383,8 +384,8 @@ a.navbar__item.navbar__link.btn:hover {
 /* level2 */
 li.theme-doc-sidebar-item-category.theme-doc-sidebar-item-category-level-2 .menu__list-item-collapsible {
   font-weight: 600;
-  padding-top: .5rem;
-  padding-bottom: .5rem;
+  margin-top: .5rem;
+  margin-bottom: .5rem;
 }
 
 .menu__list .menu__list {
