--- a/website/src/components/card/styles.module.css
+++ b/website/src/components/card/styles.module.css
@@ -1,8 +1,12 @@
+:root {
+  --border-radius: 10px;
+}
+
 .card {
   border: 1px solid #EFF2F3;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   box-shadow: 0px 11px 24px rgba(138, 138, 138, .1);
-  padding: 2.5rem;
+  padding: 2.5rem 2.5rem 1.5rem 2.5rem;
 }
 
 .cardWrapper, .cardWrapper article {
